UIUX-2276-alignment issue in branch portal page

--- a/src/components/Pages/EmailVerification/EmailVerification.css
+++ b/src/components/Pages/EmailVerification/EmailVerification.css
@@ -18,6 +18,9 @@
   text-decoration: underline !important;
 }
 
+.acknowledgeTextSpan {
+  color: #434343;
+}
 .documetVirificationHeading {
   font-size: 2rem;
 }
@@ -94,6 +97,7 @@
 
 #checkBoxGrid .MuiStepper-vertical .MuiStep-root .MuiStepContent-root {
   padding-left: 30px !important;
+  padding-right: 0px !important;
 }
 
 #selectInputGrid div label {
